# thapbi-pict

./: .appveyor.yml  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  INSTALL.rst  LICENSE.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-docs.txt  requirements-ext.txt  requirements-test.txt  requirements.txt  setup.py
.circleci/: config.yml
database/: 2021-01-28-ITS_Peronosporales_w32.fasta  2021-02-23-ITS_Oomycota_w32.fasta  2021-05-20-ITS_Oomycota_w32.fasta  2021-10-21-ITS_Oomycota_w32.fasta  2021-11-22-ITS_Oomycota_w32.fasta  2022-07-05_ITS1_Oomycota_obs.fasta  2022-07-05_ITS1_Oomycota_w32.fasta  2022-08-17_ITS1_Oomycota_w32.fasta  2022-09-16_ITS1_Oomycota_obs.fasta  2022-09-16_ITS1_Oomycota_w32.fasta  2023-08-18_ITS1_Oomycota_w32.fasta  ITS1-DB.fasta  ITS1_DB.fasta  ITS1_DB.sql  ITS1_DB.tsv  ITS1_DB_v0.1.0.sqlite.bz2  Nothophytophthora_ITS1_curated.fasta  Oomycota_ITS1_obs.fasta  Oomycota_ITS1_search.sh  Oomycota_ITS1_w32.fasta  Peronosporales_ITS1_curated.fasta  Phytophthora_ITS1_curated.fasta  README.md  README.rst  build_CURATED+NCBI.sh  build_CURATED.sh  build_ITS1_DB.sh  build_all.sh  build_default_DB.sh  controls.fasta  make_nr_ctrl_a.py  synthetic_controls_ITS1.fasta  synthetic_controls_rps10.fasta
docs/: assess.rst  commands.rst  conf.py  database.rst  index.rst  introduction.rst  negatives.rst  pipeline.pptx  quick_start.rst  worked_example.rst
examples/: README.rst  README.txt  clean_all.sh  run_all.sh  setup_all.sh  test_all.sh
scripts/: README.rst  blast_to_fasta.py  fetch_its1_acc.py  gg_to_sintax.py  make_nr.py  make_nr_ctrl_a.py  md5.py  missed_refs.py  plot_reduction.py  pooling.py  (+4 more)
(+744 files in other folders)
