[build-system]
requires = ['pip>=21.3', 'setuptools>=61', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'thapbi_pict'
description = 'THAPBI Phytophthora ITS1 Classifier Tool (PICT).'
keywords = ['amplicon', 'sequencing']
license = {text = 'MIT'}
readme = 'README.rst'
authors = [
  {name = 'Peter J. A. Cock'}
]
maintainers = [
  {name = 'Peter J. A. Cock', email = 'p.j.a.cock@googlemail.com'}
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: Console',
  'Intended Audience :: Science/Research',
  'License :: Freely Distributable',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Bio-Informatics',
  'Topic :: Software Development :: Quality Assurance',
]
requires-python = '>=3.7'
dependencies = [
  'biopython',
  'cutadapt >=4.0',
  'matplotlib',
  'networkx >=2.4,!=2.8.3,!=2.8.4',
  'pydot',
  'rapidfuzz >=2.4.0',
  'sqlalchemy',
  'xlsxwriter',
]
dynamic = ['version']
[project.scripts]
thapbi_pict = 'thapbi_pict.__main__:main'
[project.optional-dependencies]
develop = ['build', 'twine']
[project.urls]
Homepage = 'https://github.com/peterjc/thapbi-pict'
'Source Code' = 'https://github.com/peterjc/thapbi-pict/'
'Bug Tracker' = 'https://github.com/peterjc/thapbi-pict/issues'
Documentation = 'https://thapbi-pict.readthedocs.io/'

[tool.setuptools]
py-modules = ['thapbi_pict']
zip-safe = true
[tool.setuptools.dynamic]
version = {attr = 'thapbi_pict.__version__'}
